# rust-gcp-k8s-micro-server

./: .gitignore  Cargo.toml  README.adoc
src/: config.rs  main.rs  middleware.rs
src/config/: config.rs
src/logger/: logger.rs
src/middlewares/: configuration.rs  log.rs  log_io.rs  mod.rs
src/routes/: index.rs
