[package]
name = "rust-gcp-k8s-micro-server"
version = "0.0.1"
authors = ["Agent K <nikolalohinski@gmail.com>"]

[dependencies]
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = { version = "0.4", features = ["serde"] }
gotham = "0.4.0"
gotham_derive = "0.4.0"
http = "0.1.21"
stackdriver_logger = { version = "*", default-features = false, features = ["prod"] }
hyper = "0.12.35"
futures = "0.1"
mime = "0.3.16"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"

[dev-dependencies]
simple-logging="2.0.2"
tempfile = "3.1.0"
hamcrest = "*"
assert-json-diff = "*"
